# kanji-battle

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/routes/: battle.py  kanji.py  leaderboard.py  players.py  questions.py  shop.py
app/core/: config.py
app/data/: questions.py  starter_kanji.py  weapons.py
app/db/: engine.py  models.py  session.py  url.py
app/models/: enums.py
app/repositories/: battle_repo.py  in_memory_battle_repo.py  kanji_repo.py  leaderboard_repo.py  progress_repo.py  question_repo.py  shop_repo.py
app/schemas/: battle.py  kanji.py  leaderboard.py  progress.py  question.py  shop.py
app/services/: battle_balance.py  battle_engine.py  kanji_api.py  kanji_power.py  kanji_question_factory.py  question_selector.py  rewards.py  scoring.py  unlocks.py
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_player_owner_token.py
scripts/: cleanup_online_qa.py  clear_postgres_sessions.py  import_jlpt_kanji.py  import_starter_kanji.py  sync_sqlite_seed_to_database.py  sync_sqlite_to_postgres_raw.py  verify_postgres_raw.py
tests/: test_api.py  test_battle_engine.py  test_kanji_power.py  test_kanji_question_factory.py
web/: app.js  index.html  phaser-arena.js  styles.css
