[project]
name = "jlpt-kanji-battle-online"
version = "0.1.0"
description = "A FastAPI educational battle game for JLPT kanji and vocabulary practice."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.0",
    "certifi>=2026.0.0",
    "fastapi>=0.116.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.11.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "httpx2>=2.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["web*", "migrations*", "tests*"]
